--- a/index.html
+++ b/index.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="br">
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
@@ -8,7 +8,7 @@
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Ubuntu:wght@400;700&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="style.css">
-    <script src="./index.js" defer></script>
+    <script src="./script.js" defer></script>
     <title>Calculadora</title>
 </head>
 <body>
@@ -20,12 +20,12 @@
         <input type="text" id="input">
         <div id="keys">
             <button id="clear">C</button>
-            <button id="(" data-value="(">(</button>
-            <button id=")" data-value=")">)</button>
-            <button id="/" data-value="/">/</button>
-            <button id="7" data-value="7">7</button>
-            <button id="8" data-value="8">8</button>
-            <button id="9" data-value="9">9</button>
+            <button class="charKey" data-value=" ( ">(</button>
+            <button class="charKey" data-value=" ) ">)</button>
+            <button class="charKey" data-value=" / ">/</button>
+            <button class="charKey" data-value="7">7</button>
+            <button class="charKey" data-value="8">8</button>
+            <button class="charKey" data-value="9">9</button>
             <button class="charKey" data-value=" * ">*</button>
             <button class="charKey" data-value="4">4</button>
             <button class="charKey" data-value="5">5</button>
